--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-easy-rating": "^0.2.1",
     "react-native-elements": "^3.4.1",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-file-provider": "^1.1.0",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.2",
